fix: overflow-x

--- a/src/assets/styles/components/contact.scss
+++ b/src/assets/styles/components/contact.scss
@@ -4,6 +4,7 @@
     color: $titleColor;
     padding: 50px 0px;
     width: 100%;
+    overflow-x: hidden;
 
     @media (max-width: 1280px) {
         padding: 50px 0 0;
