--- a/src/assets/styles/components/experiences.scss
+++ b/src/assets/styles/components/experiences.scss
@@ -4,6 +4,8 @@
     color: $titleColor;
     padding: 50px 0px;
     width: 100%;
+    overflow-x: hidden;
+
     @media (max-width: 1280px) {
         padding: 50px 0 0;
     }
